@@ -22,18 +22,22 @@ public class SalesTest {
     public static void main(String[] args) {
     EntityManager eM = emf.createEntityManager();
     SalesDAO salesDAO = new SalesDAO(eM);
+
     Faker faker = new Faker();
     Random random = new Random();
         List<Status> colorList = Arrays.stream(Status.values())
-                .collect(Collectors.toList());
+                .toList();
 
 
         Supplier<Sales> supplier = ()->(new VerifiedSupplier(faker.harryPotter().character()));
         Supplier<Sales> supplier1 = () -> (new VendingMachine(colorList.get(random.nextInt(0, colorList.size()))));
 
-       for (int i = 0; i < 10; i++) {
+       for (int i = 0; i < 15; i++) {
           salesDAO.save(supplier.get());
+          salesDAO.save(supplier1.get());
         }
+
+
 
     }
 }
